clusters/cl01tl/manifests/medialyze/Deployment-medialyze.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medialyze
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: medialyze
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: medialyze
    helm.sh/chart: medialyze-5.2.1
  namespace: medialyze
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/name: medialyze
      app.kubernetes.io/instance: medialyze
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: medialyze
        app.kubernetes.io/name: medialyze
    spec:
      enableServiceLinks: false
      serviceAccountName: medialyze
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      hostIPC: false
      hostNetwork: false
      hostPID: false
      dnsPolicy: ClusterFirst
      containers:
        - env:
            - name: HOST_PORT
              value: "8080"
            - name: SCAN_RUNTIME_WORKER_COUNT
              value: "2"
            - name: TZ
              value: America/Chicago
            - name: MEDIA_HOST_DIR
              value: /media
          image: ghcr.io/frederikemmer/medialyze:0.19.1@sha256:0f8016f92a91eff9c526f4ff61d682d36edf4a3d72a64a30606e606f1ff62308
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 3
          name: main
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 5m
              memory: 100Mi
          startupProbe:
            failureThreshold: 60
            httpGet:
              path: /api/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /config
              name: data
            - mountPath: /media
              name: media
              readOnly: true
        - env:
            - name: OAUTH2_PROXY_HTTP_ADDRESS
              value: 0.0.0.0:4180
            - name: OAUTH2_PROXY_METRICS_ADDRESS
              value: 0.0.0.0:44180
            - name: OAUTH2_PROXY_UPSTREAMS
              value: http://localhost:8080
            - name: OAUTH2_PROXY_PROVIDER
              value: oidc
            - name: OAUTH2_PROXY_CODE_CHALLENGE_METHOD
              value: S256
            - name: OAUTH2_PROXY_SKIP_PROVIDER_BUTTON
              value: "true"
            - name: OAUTH2_PROXY_SET_XAUTHREQUEST
              value: "true"
            - name: OAUTH2_PROXY_PASS_USER_HEADERS
              value: "true"
            - name: OAUTH2_PROXY_EMAIL_DOMAINS
              value: '*'
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.15.5@sha256:8498b0d0ef0a7b29686414000a08aee467f02d0299c9ed1e006a8f33fc017916
          livenessProbe:
            httpGet:
              path: /ping
              port: 4180
          name: oauth
          readinessProbe:
            httpGet:
              path: /ready
              port: 4180
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: medialyze-data
        - name: media
          persistentVolumeClaim:
            claimName: medialyze-nfs-storage
