clusters/cl01tl/manifests/medialyze/Service-medialyze.yaml
apiVersion: v1
kind: Service
metadata:
  name: medialyze
  labels:
    app.kubernetes.io/instance: medialyze
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: medialyze
    app.kubernetes.io/service: medialyze
    helm.sh/chart: medialyze-5.2.1
  namespace: medialyze
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
    - port: 4180
      targetPort: 4180
      protocol: TCP
      name: oauth
    - port: 44180
      targetPort: 44180
      protocol: TCP
      name: oauth-metrics
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: medialyze
    app.kubernetes.io/name: medialyze
