clusters/cl01tl/manifests/medialyze/HTTPRoute-medialyze.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: medialyze
  labels:
    app.kubernetes.io/instance: medialyze
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: medialyze
    helm.sh/chart: medialyze-5.1.0
  namespace: medialyze
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "medialyze.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: medialyze
          namespace: medialyze
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
